--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "eslint": "^8.24.0",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.5.1"
   }
 }
